--- a/src/IdentityServerAspNetIdentity/IdentityServerAspNetIdentity.csproj
+++ b/src/IdentityServerAspNetIdentity/IdentityServerAspNetIdentity.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Modal" Version="3.0.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.0.2" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="3.0.2" />
 
