--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -16,6 +16,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="Syncfusion.EJ2.Blazor" Version="17.3.0.29-beta" />
+    <PackageReference Include="Syncfusion.EJ2.Blazor.PdfViewerServer.Windows" Version="17.3.0.29-beta" />
+    <PackageReference Include="Syncfusion.EJ2.WordEditor.Blazor" Version="17.3.0.29-beta" />
   </ItemGroup>
 
   <ItemGroup>
